# VerITAS

./: Cargo.toml  README.md  bilinear.py  crop.circom  genCrop.py  genNoRound.py  genpic.py  gray.rs  no_round.circom  resize-full.rs  resize.circom
example/: veritas.rs
examples/: blur.rs  crop-full.rs  crop.rs  generate-a-coms.rs  generate-a-row-coms.rs  gray.rs  opt-veritas-fs.rs  opt-veritas.rs  resize.rs  veritas-fs.rs  veritas.rs
src/: absorbcircuit.rs  lib.rs
src/herring/: ipa.rs
src/kzg/: mod.rs  space.rs  time.rs
src/psnark/streams/: hadamard_stream.rs  intofield_stream.rs  lookup_stream.rs  tensor_stream.rs
