[package]
name = "zk-veritas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["gate_testing", "parallel", "rand_chacha", "std", "timing"]
#gate_testing = []
#parallel = ["hashbrown/rayon", "plonky2_maybe_rayon/parallel"]
#std = ["anyhow/std", "rand/std", "itertools/use_std"]
#timing = ["std", "dep:web-time"]

[dependencies]
ahash = { version = "0.8.7", default-features = false, features = ["compile-time-rng"] } # NOTE: Be sure to keep this version the same as the dependency in `hashbrown`.
anyhow = { version = "1.0.40", default-features = false }
hashbrown = { version = "0.14.3", default-features = false, features = ["ahash", "serde"] } # NOTE: When upgrading, see `ahash` dependency.
itertools = { version = "0.11.0", default-features = false }
log = { version = "0.4.14", default-features = false }
num = { version = "0.4", default-features = false, features = ["rand"] }
rand = { version = "0.8.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
static_assertions = { version = "1.1.0", default-features = false }
unroll = { version = "0.1.5", default-features = false }
sha256 = "1.1.2"
plonky2 = "0.2.2"
rayon = "1.10.0"


# Local dependencies
# plonky2_maybe_rayon = { version = "0.2.0", path = "../maybe_rayon", default-features = false }